task05/manifests/deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task05-v2
  labels:
    app: task05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task05
  template:
    metadata:
      labels:
        app: task05
        version: v2
    spec:
      containers:
        - name: task05
          image: dbelokursky/task05:0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /actuator/health
              port: 8000
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /actuator/health
              port: 8000
