task05/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task05-deployment
  labels:
    app: task05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task05
  template:
    metadata:
      labels:
        app: task05
    spec:
      containers:
        - name: task05
          image: dbelokursky/task04:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /health
              port: 8000
          readinessProbe:
            initialDelaySeconds: 60
            httpGet:
              path: /health
              port: 8000
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: task05-cm
            items:
              - key: application.yml
                path: application.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task05-v1-deployment
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: task05
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: task05
        version: v1
    spec:
      containers:
        - name: task05
          image: dbelokursky/task05:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server-v1
  labels:
    version: v1
spec:
  type: ClusterIP
  ports:
    - name: echo-port
      port: 80
      targetPort: 8080
  selector:
    app: echo-server
    version: v1
