task05/manifests/service-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: task05-v2
  labels:
    app: task05
    version: v2
spec:
  selector:
    app: task05
    version: v2
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8000
