task05/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: task05-service
  labels:
    app: task05
spec:
  selector:
    app: task05
  ports:
    - protocol: TCP
      name: web
      port: 8000
      targetPort: 8000
